# cookiecutter-aiohttp-sqlalchemy

./: .gitignore  LICENSE  README.md  cookiecutter.json
examples/example_web_app/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  env.example  env.template  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_floating.txt  setup.py
examples/example_web_app/.github/workflows/: ci.yml
examples/example_web_app/alembic/: env.py
examples/example_web_app/alembic/versions/: .gitkeep  001_create_example_table.py
examples/example_web_app/config/: default.conf
examples/example_web_app/example_web_app/: __init__.py  app.py  background.py  config.py  context.py  database.py  init_example.py  logger.py  middlewares.py  routes.py
examples/example_web_app/example_web_app/controllers/: aliveness_api.py  base.py  example_api.py  health_api.py  websocket_api.py
examples/example_web_app/example_web_app/core/: __init__.py  cache.py  config.py  database.py  logger.py  openapi.py  redis.py  websocket.py
examples/example_web_app/example_web_app/docs/: swagger-v1.0.yaml
examples/example_web_app/example_web_app/middleware/: __init__.py  metrics.py  rate_limit.py  request_context.py  sentry.py  telemetry.py
examples/example_web_app/example_web_app/models/: base.py  example.py  health.py  mixins.py
examples/example_web_app/example_web_app/schemas/: __init__.py  example.py
examples/example_web_app/example_web_app/scripts/: init_db.py
examples/example_web_app/example_web_app/tasks/: __init__.py  jobs.py  worker.py
examples/example_web_app/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
examples/example_web_app/tests/: conftest.py
examples/example_web_app/tests/fixtures/: api_instance.py  database.py
examples/example_web_app/tests/test_controllers/: test_aliveness_api.py  (+1 more)
{{cookiecutter.app_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  env.template  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_floating.txt  setup.py
{{cookiecutter.app_name}}/.github/workflows/: ci.yml
{{cookiecutter.app_name}}/alembic/: env.py
{{cookiecutter.app_name}}/config/: default.conf  example.conf  {{cookiecutter.app_name}}-example.conf
{{cookiecutter.app_name}}/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
{{cookiecutter.app_name}}/tests/: README.md  conftest.py  test_controllers_example_api.py
{{cookiecutter.app_name}}/tests/fixtures/: api_instance.py  api_instance_fixture.py
{{cookiecutter.app_name}}/tests/test_controllers/: test_example_api.py
{{cookiecutter.app_name}}/tests/test_integration/: __init__.py  test_example_api.py  test_health.py  test_websocket.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py  app.py  background.py  config.py  context.py  database.py  init_example.py  logger.py  middlewares.py  routes.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/controllers/: aliveness_api.py  base.py  example_api.py  health_api.py  websocket_api.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/core/: __init__.py  cache.py  config.py  context.py  database.py  logger.py  openapi.py  redis.py  websocket.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/docs/: swagger-v1.0.yaml
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/middleware/: __init__.py  metrics.py  rate_limit.py  request_context.py  sentry.py  telemetry.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/models/: base.py  example.py  mixins.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/schemas/: __init__.py  base.py  example.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/scripts/: __init__.py  init_db.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/tasks/: __init__.py  jobs.py  worker.py
(+20 files in other folders)
